# STT

./: .gitignore  README.md  base_stt.py  fasterwhispher_requirements.txt  fasterwhispher_stt.py  openai_requirements.txt  openai_stt.py  parakeet_pre-requirements.txt  parakeet_requirements.txt  parakeet_stt.py  pyproject.toml  setup.py  stt.html  stt_runner.py
.github/workflows/: daily-stt-test.yml  deploy-backend.yml
hf_backend/: Dockerfile  README.md  app.py  audio_captions.db  index.html  pyproject.toml  requirements.txt  run.py
hf_backend/app/: main.py
hf_backend/app/api/: routes.py
hf_backend/app/core/: config.py
hf_backend/app/db/: crud.py  database.py
hf_backend/app/services/: streaming.py  worker.py
stt/: base.py  common.py  fasterwhispher.py  live.py  openai.py  parakeet.py  runner.py
